added dockerfile and docket-compose, cleaned code
