# docs/swagger.json
@@ -44,7 +44,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.AuthToken"
+                                            "$ref": "#/definitions/models.LogInRes"
                                         }
                                     }
                                 }
@@ -244,14 +244,6 @@
                 },
                 "status": {
                     "type": "boolean"
-                }
-            }
-        },
-        "models.AuthToken": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string"
                 }
             }
         },
